TESTS=test_http_plugin.sh \
	test_rtsp_plugin.sh \
	test_https_plugin.sh \
	test_dns_plugin.sh \
	test_passivedns_plugin.sh \
	test_dnssd_plugin.sh \
	test_sip_plugin.sh \
	test_smtp_plugin.sh \
	test_ntp_plugin.sh \
	test_arp_plugin.sh \
	test_pstats_plugin.sh \
  test_ovpn_plugin.sh \
	test_ssdp_plugin.sh \
	test_basic_plugin.sh

EXTRA_DIST=test_plugin.sh \
	test_http_plugin.sh \
	test_rtsp_plugin.sh \
	test_https_plugin.sh \
	test_dns_plugin.sh \
	test_passivedns_plugin.sh \
	test_dnssd_plugin.sh \
	test_sip_plugin.sh \
	test_smtp_plugin.sh \
	test_ntp_plugin.sh \
	test_arp_plugin.sh \
	test_pstats_plugin.sh \
  test_ovpn_plugin.sh \
	test_ssdp_plugin.sh \
	test_basic_plugin.sh \
	test_plugin.sh \
	test_reference/basic \
	test_reference/pstats \
	test_reference/ssdp \
	test_reference/arp \
	test_reference/dns \
	test_reference/dnssd \
	test_reference/http \
	test_reference/rtsp \
	test_reference/https \
	test_reference/ntp \
	test_reference/sip \
	test_reference/smtp \
	test_reference/passivedns \
	test_reference/ovpn

clean-local:
	rm -rf test_output
