TESTS=test_http.sh \
	test_rtsp.sh \
	test_tls.sh \
	test_dns.sh \
	test_passivedns.sh \
	test_dnssd.sh \
	test_sip.sh \
	test_smtp.sh \
	test_ntp.sh \
	test_pstats.sh \
	test_ovpn.sh \
	test_ssdp.sh \
	test_idpcontent.sh \
	test_netbios.sh \
	test_basic.sh \
	test_basicplus.sh \
	test_phists.sh \
	test_bstats.sh \
	test_wg.sh

EXTRA_DIST=test.sh \
	test_http.sh \
	test_rtsp.sh \
	test_tls.sh \
	test_dns.sh \
	test_passivedns.sh \
	test_dnssd.sh \
	test_sip.sh \
	test_smtp.sh \
	test_ntp.sh \
	test_pstats.sh \
	test_ovpn.sh \
	test_ssdp.sh \
	test_netbios.sh \
	test_basic.sh \
	test_basicplus.sh \
	test_idpcontent.sh \
	test.sh \
	test_bstats.sh \
	test_phists.sh \
	test_wg.sh \
	reference/basic \
	reference/basicplus \
	reference/pstats \
	reference/ssdp \
	reference/dns \
	reference/dnssd \
	reference/http \
	reference/rtsp \
	reference/tls \
	reference/ntp \
	reference/sip \
	reference/smtp \
	reference/passivedns \
	reference/ovpn \
	reference/idpcontent \
	reference/netbios \
	reference/bstats \
	reference/phists \
	reference/wg

clean-local:
	rm -rf output
