add_subdirectory(common)
add_subdirectory(basicplus)
add_subdirectory(bstats)
add_subdirectory(dns)
add_subdirectory(dnssd)
add_subdirectory(flow_hash)
add_subdirectory(http)
add_subdirectory(icmp)
add_subdirectory(pstats)
add_subdirectory(mpls)
add_subdirectory(phists)
add_subdirectory(ovpn)
add_subdirectory(ntp)
add_subdirectory(vlan)
add_subdirectory(osquery)
add_subdirectory(netbios)
add_subdirectory(tls)
add_subdirectory(wg)
add_subdirectory(rtsp)
add_subdirectory(smtp)
add_subdirectory(quic)

if (ENABLE_PROCESS_NETTISA)
    #add_subdirectory(nettisa)
endif ()

if (ENABLE_PROCESS_EXPERIMENTAL)
    add_subdirectory(sip)
endif ()