add_subdirectory(basicplus)
add_subdirectory(bstats)
add_subdirectory(icmp)
add_subdirectory(vlan)
add_subdirectory(flowHash)
add_subdirectory(osquery)
add_subdirectory(idpContent)
add_subdirectory(phists)
add_subdirectory(pstats)
add_subdirectory(ovpn)
add_subdirectory(wg)
add_subdirectory(ssdp)
add_subdirectory(ssaDetector)
add_subdirectory(mqtt)

if (ENABLE_PROCESS_EXPERIMENTAL)
	add_subdirectory(sip)
endif()
